add beginnings of completer support